--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.4",
+    "@types/raphael": "^2.3.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
+    "raphael": "^2.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-raphael": "^0.9.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
@@ -39,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^12.19.4"
   }
 }
